name: GitHub Actions Demo on: [push] jobs:   Explore-GitHub-Actions:     runs-on: ubuntu-latest     steps:       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."       - name: Check out repository code         uses: actions/checkout@v2       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."       - run: echo "🖥️ The workflow is now ready to test your code on the runner."       - name: List files in the repository         run: |           ls ${{ github.workspace }}       - run: echo "🍏 This job's status is ${{ job.status }}."

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,4 +15,70 @@
     "[go]": {
         "editor.formatOnSave": true
     },
+    "search.useGlobalIgnoreFiles": true,
+    "files.autoSave": "onFocusChange",
+    "editor.formatOnPaste": true,
+    "html.format.unformatted": "",
 }
+"id": "po_1J81QHIwrPLAhbrNCQZnlkdZ",
+"object": "payout",
+"amount": 1100,
+"arrival_date": 1625051861,
+"automatic": true,
+"balance_transaction": "txn_1J81QHIwrPLAhbrN52GBZLaC",
+"created": 1625051861,
+"currency": "myr",
+"description": "STRIPE PAYOUT",
+"destination": "ba_1J81QHIwrPLAhbrNugmEWlaK",
+"failure_balance_transaction": null,
+"failure_code": null,
+"failure_message": null,
+"livemode": false,
+"metadata": {},
+"method": "standard",
+"original_payout": null,
+"reversed_by": null,
+"source_type": "card",
+"statement_descriptor": null,
+"status": "in_transit",
+"type": "bank_account"
+}
+"id": "po_1J81QHIwrPLAhbrNCQZnlkdZ",
+"object": "payout",
+"amount": 1100,
+"arrival_date": 1625051861,
+"automatic": true,
+"balance_transaction": "txn_1J81QHIwrPLAhbrN52GBZLaC",
+"created": 1625051861,
+"currency": "myr",
+"description": "STRIPE PAYOUT",
+"destination": "ba_1J81QHIwrPLAhbrNugmEWlaK",
+"failure_balance_transaction": null,
+"failure_code": null,
+"failure_message": null,
+"livemode": false,
+"metadata": {},
+"method": "standard",
+"original_payout": null,
+"reversed_by": null,
+"source_type": "card",
+"statement_descriptor": null,
+"status": "in_transit",
+"type": "bank_account"
+}
+paymentRequest.canMakePayment().then(result => {
+  if (result) {
+    // Mount paymentRequestButtonElement to the DOM
+  }
+
+  var paymentRequest = stripe.paymentRequest({
+  country: 'US',
+  currency: 'usd',
+  total: {
+    label: 'Demo total',
+    amount: 1000,
+    },
+  requestPayerName: true,
+  requestPayerEmail: true,
+  });
+  
